--- a/groves/index.html
+++ b/groves/index.html
@@ -1,28 +1,34 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<meta http-equiv="Content-Language" content="en-gb">
-<link href="../stylesheet.css" rel="stylesheet">
-<link rel="icon" href="../docs/hearthwell.png">
-<title>Groves</title></head>
+<html>
+
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+	<meta http-equiv="Content-Language" content="en-gb">
+	<link href="../stylesheet.css" rel="stylesheet">
+	<link rel="icon" href="../docs/hearthwell.png">
+	<title>Groves</title>
+</head>
+
 <body>
-<object style="border:0;padding:0;width: 100%" type="text/html" data="../navbar.html"></object>
-<object class="patron" type="text/html" data="patron.html"></object>
-<hr>
-<table style="border-spacing: 0">
-<td width="480px">
-	<h1>Groves</h1>
-	<p class="discord">
-		Download this at <a href="https://www.curseforge.com/minecraft/mc-mods/groves">curseforge</a>.
-	</p>
-	<p>
-		This mod adds a simple customizable block called a grove.<br>
-		A grove can be placed anywhere and will, from time to time, check the surrounding area for specific blocks.<br>
-		If its requirements are satisfied, it may spawn entities or items on the ground.<br>
-	</p>
-</td>
-<td>
-	<img src="grove.png" width="512px">
-</td>
-</table>
+	<a href="https://www.patreon.com/bePatron?u=23491431"><img class="patron" src="../patreon.svg"></a>
+	<object style="border:0; padding:0; width:100%; height: 34px;" type="text/html" data="../navbar.html"></object>
+	<hr>
+	<table style="border-spacing: 0">
+		<td width="480px">
+			<h1>Groves</h1>
+			<p class="discord">
+				Download this at <a href="https://www.curseforge.com/minecraft/mc-mods/groves">curseforge</a>.
+			</p>
+			<p>
+				This mod adds a simple customizable block called a grove.<br>
+				A grove can be placed anywhere and will, from time to time, check the surrounding area for specific
+				blocks.<br>
+				If its requirements are satisfied, it may spawn entities or items on the ground.<br>
+			</p>
+		</td>
+		<td>
+			<img src="grove.png" width="512px">
+		</td>
+	</table>
 	<h3>How do Groves work?</h3>
 	<p>
 		A Grove is a block that, when activated, will try to spawn creatures/items around it.<br />
@@ -37,25 +43,28 @@
 	<p>
 		<span class="bold">Example:</span><br />
 		Right-clicking a Base Grove with an ender star will turn it into a Nether Grove.<br />
-		The Nether Grove requires 500 power, and  when it reaches it, it will spawn Wither Skelletons around it.<br />
+		The Nether Grove requires 500 power, and when it reaches it, it will spawn Wither Skelletons around it.<br />
 		To reach it, you need to place blocks around it.<br />
 		Placing Netherrack will give it 5 power;<br />
 		Placing Glowstone will give it 10 power.<br />
-		The Nether Grove will only spawn creatures if it has at least 100 blocks of netherrack around it, or 50 blocks of Glowstone around it.<br />
+		The Nether Grove will only spawn creatures if it has at least 100 blocks of netherrack around it, or 50 blocks
+		of Glowstone around it.<br />
 		It can also have any combination between Netherrack and Glowstone, as long as the power reaches 500.<br />
 	</p>
-	
-	
-<h3>Crafttweaker</h3>
-<p>
-	This mod is designed around CraftTweaker.<br>
-	It adds a couple of simple methods to add custom groves and choose the blocks it requires.<br>
-	It requires two different scripts, one for creating the grove blocks, and another one to add the requirements and results.<br>
-</p>
+
+
+	<h3>Crafttweaker</h3>
+	<p>
+		This mod is designed around CraftTweaker.<br>
+		It adds a couple of simple methods to add custom groves and choose the blocks it requires.<br>
+		It requires two different scripts, one for creating the grove blocks, and another one to add the requirements
+		and results.<br>
+	</p>
 	<hr>
-	<table><td>
-	<p class="discord">example groves file - requires a custom loader</p>
-	<code>
+	<table>
+		<td>
+			<p class="discord">example groves file - requires a custom loader</p>
+			<code>
 	&nbsp;&nbsp;&nbsp;&nbsp;#loader groves<br>
 	&nbsp;&nbsp;&nbsp;&nbsp;<br>
 	&nbsp;&nbsp;&nbsp;&nbsp;mods.groves.createGrove("Birch Grove", //name<br> 
@@ -67,9 +76,10 @@
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;00FFAA // grove color<br>
 	&nbsp;&nbsp;&nbsp;&nbsp;);<br>
 	</code>
-	</td><td>
-	<p class="discord">example recipe file</p>
-	<code>
+		</td>
+		<td>
+			<p class="discord">example recipe file</p>
+			<code>
 	&nbsp;&nbsp;&nbsp;&nbsp;#modloaded minecraft<br>
 	<br>
 	&nbsp;&nbsp;&nbsp;&nbsp;mods.groves.addActivationItem("Birch Grove", &lt;minecraft:cobblestone&gt;);
@@ -82,9 +92,11 @@
 	<br>
 	&nbsp;&nbsp;&nbsp;&nbsp;mods.groves.addEntitySpawn("Birch Grove", "minecraft:donkey", 0.5);<br>
 	</code>
-	</td></table>
+		</td>
+	</table>
 	<hr>
 
 
 </body>
+
 </html>
