--- a/mechanics/index.html
+++ b/mechanics/index.html
@@ -29,7 +29,7 @@
 </style>
 </head>
 <body>
-<object style="border:0;padding:0;width: 100%" type="text/html" data="../navbar.html"></object>
+<object style="border:0;padding:0;width: 100%;height: 32px;" type="text/html" data="../navbar.html"></object>
 <object class="patron" type="text/html" data="patron.html"></object>
 <hr>
 
