--- a/navbar.html
+++ b/navbar.html
@@ -1,35 +1,43 @@
-<html><head>
-<style>
-	@import url('https://fonts.googleapis.com/css?family=Bree+Serif|Lato|Martel|Montserrat|Open+Sans|Oxygen|Raleway|Roboto&display=swap');
+<html>
 
-	html,
-	body {
-		padding: 0;
-		margin: 0;
-	}
+<head>
+	<style>
+		@import url('https://fonts.googleapis.com/css?family=Bree+Serif|Lato|Martel|Montserrat|Open+Sans|Oxygen|Raleway|Roboto&display=swap');
 
-	a {
-		font-family: 'Raleway', sans-serif;
-		text-decoration: none;
-		color: #000;
-		padding-left: 25px;
-		font-size: 18px;
-	}
+		html,
+		body {
+			padding: 0;
+			margin: 0;
+		}
 
-	.bold {
-		font-weight: bold;
-	}
-</style>
-</head><body>
-<div height="32px">
-	<img src="./docs/hearthwell.png" align="center" height="32px">
-	<a target="_top" href="./" class="bold">Home</a>
-	<a target="_top" href="./changelogs">Patch History</a>
-	<a target="_top" href="./reference">Recipe Reference</a>
-	<a target="_top" href="./CT">CraftTweaker</a>
-	<a target="_top" href="./aTV">aTV</a>
-	<a target="_top" href="./vaultopic" class="bold">Vaultopic</a>
-	<a target="_top" href="./mechanics" class="bold">Mechanics</a>
-	<a target="_top" href="./groves" class="bold">Groves</a>
-</div>
-</body></html>
+		a {
+			display: inline-block;
+			font-family: 'Raleway', sans-serif;
+			text-decoration: none;
+			color: #000;
+			padding-left: 25px;
+			font-size: 16pt;
+		}
+
+		.bold {
+			font-weight: bold;
+		}
+	</style>
+</head>
+
+<body>
+	<div height="64px">
+		<a target="_top" href="./"><img src="hearthwell.png" align="center" height="32px"></a>
+		<a target="_top" href="./hearthwell/" class="bold">Hearth Well</a>
+		<a target="_top" href="./vaultopic/" class="bold">Vaultopic</a>
+		<a target="_top" href="./mechanics/" class="bold">Mechanics</a>
+		<a target="_top" href="./groves/" class="bold">Groves</a>
+		<a target="_top" href="./pristeel/" class="bold">Pristeel</a>
+		<a target="_top" href="./changelogs">Patch History</a>
+		<!-- <a target="_top" href="./reference">Recipe Reference</a> -->
+		<a target="_top" href="./CT">CraftTweaker</a>
+		<a target="_top" href="./aTV">aTV</a>
+	</div>
+</body>
+
+</html>
