--- a/navbar.html
+++ b/navbar.html
@@ -33,9 +33,9 @@
 		<a target="_top" href="./mechanics/" class="bold">Mechanics</a>
 		<a target="_top" href="./groves/" class="bold">Groves</a>
 		<a target="_top" href="./pristeel/" class="bold">Pristeel</a>
-		<a target="_top" href="./changelogs">Patch History</a>
+		<!-- <a target="_top" href="./changelogs">Patch History</a> -->
 		<!-- <a target="_top" href="./reference">Recipe Reference</a> -->
-		<a target="_top" href="./CT">CraftTweaker</a>
+		<!-- <a target="_top" href="./CT">CraftTweaker</a> -->
 		<a target="_top" href="./aTV">aTV</a>
 	</div>
 </body>
