fixed hearthwell page

--- a/hearthwell/index.html
+++ b/hearthwell/index.html
@@ -48,6 +48,10 @@
 		.tablink:hover {
 			background-color: #DDDDEE;
 		}
+
+		.hwell img {
+			border: solid 1px #444444;
+		}
 	</style>
 	<script>
 		function changeTab(evt, name) {
@@ -68,39 +72,47 @@
 	<a href="https://www.patreon.com/bePatron?u=23491431"><img class="patron" src="../patreon.svg"></a>
 	<object style="border:0; padding:0; width:100%; height: 34px;" type="text/html" data="../navbar.html"></object>
 	<hr>
-	<div class="hwell">
-		<table>
-			<tr>
-				<td>
-					<img src="../hearthwell.png" height="128">
-				</td>
 
-				<td style="padding-left:32px">
-					<h1>Hearth Well - A Minecraft Mod by Wolforce</h1>
-					<p><a href="https://minecraft.curseforge.com/projects/hearth-well/files">Download Hearth Well for
-							Minecraft 1.12</a></p>
-					<p>A minecraft mod about never leaving your house,<br>
-						but, through the building of machines, making every available item anyway.</p>
-					<p>Also includes several lifestyle convenience, design enrichment and simply fun <br>
-						blocks, items and multi-block to enrich the experience.</p>
-					<table style="border-spacing: 0px;">
-						<tr><span style="font-weight: bold;">Links:</span></tr>
-						<tr>
-							<td>Curseforge:</td>
-							<td><a href="https://minecraft.curseforge.com/projects/hearth-well">
-									https://minecraft.curseforge.com/projects/hearth-well</a><br>
-						</tr>
-				</td>
-			<tr>
-				<td>Discord:</td>
-				<td><a href=" https://discord.gg/prpWgGu">
-						https://discord.gg/prpWgGu</a>
-			</tr>
+	<table>
+		<tr>
+			<td>
+				<img src="../hearthwell.png" height="128">
 			</td>
-		</table>
-		</td>
-		</tr>
-		</table>
+
+			<td style="padding-left:32px">
+				<h1>Hearth Well - A Minecraft Mod by Wolforce</h1>
+				<p><a href="https://minecraft.curseforge.com/projects/hearth-well/files">Download Hearth Well for
+						Minecraft 1.12</a></p>
+				<p>A minecraft mod about never leaving your house,<br>
+					but, through the building of machines, making every available item anyway.</p>
+				<p>Also includes several lifestyle convenience, design enrichment and simply fun <br>
+					blocks, items and multi-block to enrich the experience.</p>
+				<table style="border-spacing: 0px;">
+					<tr><span style="font-weight: bold;">Links:</span></tr>
+					<tr>
+						<td>Curseforge:</td>
+						<td><a href="https://minecraft.curseforge.com/projects/hearth-well">
+								https://minecraft.curseforge.com/projects/hearth-well</a><br>
+					</tr>
+
+					<tr>
+						<td>Discord:</td>
+						<td><a href=" https://discord.gg/prpWgGu">
+								https://discord.gg/prpWgGu</a>
+					</tr>
+					<tr>
+						<td><br /></td>
+					</tr>
+					<tr>
+						<td><a href="changelogs/">List of Changes</a></td>
+						<td><a href="CT/">CraftTweaker</a><br>
+					</tr>
+				</table>
+			</td>
+	</table>
+
+	<div class="hwell">
+
 
 		<div class="tablinks">
 			<h3 class="tablink active" onclick="changeTab(event, 'introduction')">Introduction</h3>
@@ -271,10 +283,10 @@
 					<td align="center">
 						<table>
 							<td>
-								<img src="imgs/tube.gif" width="256">
+								<img src="../mechanics/tube.gif" width="256">
 							</td>
 							<td>
-								<img src="imgs/tube2.gif" width="256">
+								<img src="../mechanics/tube2.gif" width="256">
 							</td>
 						</table>
 					</td>
