--- a/hearthwell/CT/index.html
+++ b/hearthwell/CT/index.html
@@ -5,15 +5,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <meta http-equiv="Content-Language" content="en-gb">
 
-    <link href="../stylesheet.css" rel="stylesheet">
+    <link href="../../stylesheet.css" rel="stylesheet">
     <link rel="icon" href="../docs/hearthwell.png">
     <title>Hearth Well</title>
 </head>
 
-<body>
-	<object style="border:0;padding:0;width: 100%;height: 32px;" type="text/html" data="../navbar.html"></object>
-	<object class="patron" type="text/html" data="patron.html"></object>
-	<hr>
+<body style="margin-top: 40px;">
 
     <h1>CraftTweaker Documentation</h1>
     <p>
