--- a/hearthwell/changelogs/index.html
+++ b/hearthwell/changelogs/index.html
@@ -3,15 +3,13 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<meta http-equiv="Content-Language" content="en-gb">
-	<link href="../stylesheet.css" rel="stylesheet">
-	<link rel="icon" href="../docs/hearthwell.png">
+	<link href="../../stylesheet.css" rel="stylesheet">
+	<link rel="icon" href="../../docs/hearthwell.png">
 	<title>Hearth Well Changelogs</title>
 </head>
 
-<body>
-	<object style="border:0;padding:0;width: 100%;height: 32px;" type="text/html" data="../navbar.html"></object>
-	<object class="patron" type="text/html" data="patron.html"></object>
-	<hr>
+<body style="margin-top: 40px;">
+
 	<h1>Patch History</h1>
 	<pre><code id="main">{0.6}
 discstartsoon&trade;<br/>
