--- a/mechanics/index.html
+++ b/mechanics/index.html
@@ -7,12 +7,12 @@
 	<link rel="icon" href="../docs/hearthwell.png">
 	<title>Mechanics</title>
 	<style>
-		img {
+		.main img {
 			border: solid 1px black;
 			background-color: white;
 		}
 
-		code {
+		.main code {
 			display: block;
 			border: solid 1px #888888;
 			background-color: #DDDDDD;
@@ -21,7 +21,7 @@
 			width: 700px;
 		}
 
-		td {
+		.main td {
 			vertical-align: top;
 		}
 
@@ -46,236 +46,250 @@
 	<object class="patron" type="text/html" data="patron.html"></object>
 	<hr>
 
-	<h1>Mechanics - Crafting Ways</h1>
+	<table>
+		<tr>
+			<td>
+				<img src="mechanics.png" width="256px">
+			</td>
+			<td>
+				<h1>Mechanics - Crafting Ways</h1>
 
-	<p class="discord">Mod created in colaboration with <a
-			href="https://www.curseforge.com/members/al132mc/projects">al132mc</a>
-		<br>Download this at <a
-			href="https://www.curseforge.com/minecraft/mc-mods/mechanics-crafting-ways">curseforge</a>.</p>
-	<p>
-		This mod adds some crafting mechanics to spice up modpacks.<br>
-		By itself, this mod adds almost nothing to the game, and must be configured to add recipes.<br>
-		Most recipes are available through CraftTweaker.
-	</p>
+				<p class="discord">Mod created in colaboration with <a
+						href="https://www.curseforge.com/members/al132mc/projects">al132mc</a>
+					<br>Download this at <a
+						href="https://www.curseforge.com/minecraft/mc-mods/mechanics-crafting-ways">curseforge</a>.</p>
+				<p>
+					This mod adds some crafting mechanics to spice up modpacks.<br>
+					By itself, this mod adds almost nothing to the game, and must be configured to add recipes.<br>
+					Most recipes are available through CraftTweaker.
+				</p>
+			</td>
+		</tr>
+	</table>
 
 	<hr>
-	<table>
-		<td>
-			<h3>Crushing Block</h3>
-			<p>The Crushing Block can be dropped on top of blocks to crush them.
+	<div class="main">
+		<table>
+			<td>
+				<h3>Crushing Block</h3>
+				<p>The Crushing Block can be dropped on top of blocks to crush them.
+					<br /><br />
+					Example usage:
+					<code>
+						mods.mechanics.<span class="orange">addCrushingBlockRecipe</span>(<br/>
+						&nbsp;&nbsp;&nbsp;&nbsp;[&lt;minecraft:iron_ingot&gt;] <span class="comment">// item that is crushed</span> <br />
+						&nbsp;&nbsp;&nbsp;&nbsp;[&lt;minecraft:gold_ingot&gt; , &lt;minecraft:diamond&gt;], <span class="comment">// possible resulting items</span> <br />
+						&nbsp;&nbsp;&nbsp;&nbsp;[0.75, 0.25] <span class="comment">// probabilities of each possible result</span> <br />
+						);
+					</code>
+				</p>
+			</td>
+			<td>
+				<img src="crushing.gif" width="350px">
+			</td>
+		</table>
+
+		<hr>
+
+		<table>
+			<td>
+				<h3>Alloying Furnace</h3>
+				<p>The Alloy furnace requires fuel to transform two items into a third. The order does not matter.</p>
+				Example usage:
+				<code>
+					mods.mechanics.<span class="orange">addAlloyFurnaceRecipe</span>(<br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:iron_ingot&gt;, <span class="comment">// one input item </span> <br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:gold_ingot&gt;, <span class="comment">// other input item </span> <br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:diamond&gt; <span class="comment">// resulting item </span> <br />
+					);
+				</code>
+			</td>
+			<td>
+				<img src="alloyfurnace.png" width="512px">
+			</td>
+		</table>
+
+		<hr>
+
+		<table>
+			<td>
+				<h3>Transforming Items with the Nether Portal</h3>
+				<p>Throw items into the Nether Portal and they come out transformed!</p>
+				Example usage:
+				<code>
+					mods.mechanics.<span class="orange">addNetherPortalRecipe</span>(<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:iron_ingot&gt;, <span class="comment">// item thrown in </span> <br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:gold_ingot&gt; <span class="comment">// item that comes out </span> <br />
+					);
+				</code>
+			</td>
+			<td>
+				<img src="crystal_passing.gif" width="512px">
+			</td>
+		</table>
+
+		<hr>
+
+		<table>
+			<td>
+				<h3>Drying Table</h3>
+				<p>Similar to Drying Racks from Tinker's and Primal Core. Time will transform an item stack into
+					another.
+				</p>
 				<br /><br />
 				Example usage:
 				<code>
-	mods.mechanics.<span class="orange">addCrushingBlockRecipe</span>(<br/>
-	&nbsp;&nbsp;&nbsp;&nbsp;[&lt;minecraft:iron_ingot&gt;] <span class="comment">// item that is crushed</span> <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;[&lt;minecraft:gold_ingot&gt; , &lt;minecraft:diamond&gt;], <span class="comment">// possible resulting items</span> <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;[0.75, 0.25] <span class="comment">// probabilities of each possible result</span> <br />
-	);
-</code>
-			</p>
-		</td>
-		<td>
-			<img src="crushing.gif" width="350px">
-		</td>
-	</table>
+					mods.mechanics.<span class="orange">addDryingTableRecipe</span>(<br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:rotten_flesh&gt;, <span class="comment">// item placed</span> <br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:leather&gt; <span class="comment">// final dried item </span> <br />
+					);
+				</code>
+				or
+				<code>
+					mods.mechanics.<span class="orange">addDryingTableRecipe</span>(<br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:rotten_flesh&gt;, <span class="comment">// item placed</span> <br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:leather&gt;, <span class="comment">// final dried item </span> <br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;1200&gt; <span class="comment">// time it takes to dry, in ticks </span> <br />
+					);
+				</code>
+			</td>
+			<td>
+				<img src="dryingtable.png" width="512px">
+			</td>
+		</table>
 
-	<hr>
+		<hr>
 
-	<table>
-		<td>
-			<h3>Alloying Furnace</h3>
-			<p>The Alloy furnace requires fuel to transform two items into a third. The order does not matter.</p>
-			Example usage:
-			<code>
-	mods.mechanics.<span class="orange">addAlloyFurnaceRecipe</span>(<br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:iron_ingot&gt;, <span class="comment">// one input item </span> <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:gold_ingot&gt;, <span class="comment">// other input item </span> <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:diamond&gt; <span class="comment">// resulting item </span> <br />
-	);
-</code>
-		</td>
-		<td>
-			<img src="alloyfurnace.png" width="512px">
-		</td>
-	</table>
+		<table>
+			<td>
+				<h3>Martlets</h3>
+				<p>Martlets to crack drown blocks. Comes in four varieties, stone, iron, gold and diamond.<br /><br />
+					Example usage:
+					<code>
+						mods.mechanics.<span class="orange">addMartletRecipe</span>( <br />
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:sandstone:0&gt;, <span class="comment">// block broken by a Martlet </span> <br />
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:sand:0&gt; <span class="comment">// resulting item that drops </span> <br />
+						);
+					</code>
+				</p>
+			</td>
+			<td>
+				<img src="martlets.png" width="512px">
+			</td>
+		</table>
 
-	<hr>
+		<hr>
 
-	<table>
-		<td>
-			<h3>Transforming Items with the Nether Portal</h3>
-			<p>Throw items into the Nether Portal and they come out transformed!</p>
-			Example usage:
-			<code>
-	mods.mechanics.<span class="orange">addNetherPortalRecipe</span>(<br/>
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:iron_ingot&gt;, <span class="comment">// item thrown in </span> <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:gold_ingot&gt; <span class="comment">// item that comes out </span> <br />
-	);
-</code>
-		</td>
-		<td>
-			<img src="crystal_passing.gif" width="512px">
-		</td>
-	</table>
-
-	<hr>
-
-	<table>
-		<td>
-			<h3>Drying Table</h3>
-			<p>Similar to Drying Racks from Tinker's and Primal Core. Time will transform an item stack into another.
-			</p>
-			<br /><br />
-			Example usage:
-			<code>
-	mods.mechanics.<span class="orange">addDryingTableRecipe</span>(<br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:rotten_flesh&gt;, <span class="comment">// item placed</span> <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:leather&gt; <span class="comment">// final dried item </span> <br />
-	);
-</code>
-			or
-			<code>
-	mods.mechanics.<span class="orange">addDryingTableRecipe</span>(<br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:rotten_flesh&gt;, <span class="comment">// item placed</span> <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:leather&gt;, <span class="comment">// final dried item </span> <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;1200&gt; <span class="comment">// time it takes to dry, in ticks </span> <br />
-	);
-</code>
-		</td>
-		<td>
-			<img src="dryingtable.png" width="512px">
-		</td>
-	</table>
-
-	<hr>
-
-	<table>
-		<td>
-			<h3>Martlets</h3>
-			<p>Martlets to crack drown blocks. Comes in four varieties, stone, iron, gold and diamond.<br /><br />
+		<table>
+			<td>
+				<h3>Amplifying Tube</h3>
+				<p>The Amplifying Tube can transform blocks in world into other blocks or into liquids.<br />
+					Simply place two to eight amplifying tubes vertically, and the block immediately beneath them will
+					transform!</p>
+				<br /><br />
 				Example usage:
 				<code>
-	mods.mechanics.<span class="orange">addMartletRecipe</span>( <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:sandstone:0&gt;, <span class="comment">// block broken by a Martlet </span> <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:sand:0&gt; <span class="comment">// resulting item that drops </span> <br />
-	);
-</code>
-			</p>
-		</td>
-		<td>
-			<img src="martlets.png" width="512px">
-		</td>
-	</table>
+					mods.mechanics.<span class="orange">addTubeRecipe</span>( <br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:leaves:0&gt;, <span class="comment">// block placed on the bottom </span> <br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;liquid:water&gt; <span class="comment">// resulting liquid </span> <br />
+					);
+				</code>
+				or
+				<code>
+					mods.mechanics.<span class="orange">addTubeRecipe</span>( <br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:cobblestone&gt;, <span class="comment">// block placed on the bottom </span> <br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:stone:0&gt; <span class="comment">// resulting block </span> <br />
+					);
+				</code>
+			</td>
+			<td>
+				<img src="tube.gif" width="350px">
+			</td>
+		</table>
 
-	<hr>
+		<hr>
 
-	<table>
-		<td>
-			<h3>Amplifying Tube</h3>
-			<p>The Amplifying Tube can transform blocks in world into other blocks or into liquids.<br />
-				Simply place two to eight amplifying tubes vertically, and the block immediately beneath them will
-				transform!</p>
-			<br /><br />
-			Example usage:
+		<h3>Burst Seeds</h3>
+		<p>Burst Seeds are tiny blocks that, after some random amount of time, will burst into a bunch of copies of a
+			resource.</p>
+		<img src="bursting.gif" width="512px">
+		<p>
+			Burst Seeds, unfortunately, do not use CraftTweaker. Instead, you need to create a file called
+			"mechanics_burst_seeds.txt" in your scripts folder.<br />
+			Inside, you can add or remove burst seeds, one per line.<br />
+			There are three ways of creating burst seeds (without the quotes):<br />
+			"burst seed registry name" "block or item registry name" "block or item metadata"<br />
+			"burst seed registry name" "block or item registry name" "block or item metadata" "any texture"<br />
+			"burst seed registry name" "block or item registry name" "block or item metadata" "minimum number" "maximum
+			number" "any texture"<br />
+			<br />Example mechanics_burst_seeds.txt file:<br>
 			<code>
-	mods.mechanics.<span class="orange">addTubeRecipe</span>( <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:leaves:0&gt;, <span class="comment">// block placed on the bottom </span> <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;liquid:water&gt; <span class="comment">// resulting liquid </span> <br />
-	);
-</code>
-			or
-			<code>
-	mods.mechanics.<span class="orange">addTubeRecipe</span>( <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:cobblestone&gt;, <span class="comment">// block placed on the bottom </span> <br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&lt;minecraft:stone:0&gt; <span class="comment">// resulting block </span> <br />
-	);
-</code>
-		</td>
-		<td>
-			<img src="tube.gif" width="350px">
-		</td>
-	</table>
+				remove burst_seed_end_stone<br/>
+				burst_seed_sea_lantern minecraft:sea_lantern 0<br/>
+				burst_seed_furnace minecraft:furnace 0 minecraft:furnace_front_off<br/>
+				burst_seed_heavy_block mechanics:heavy_block 0 64 64 mechanics:heavy_block<br/>
+			</code>
+		</p>
 
-	<hr>
+		<br />
 
-	<h3>Burst Seeds</h3>
-	<p>Burst Seeds are tiny blocks that, after some random amount of time, will burst into a bunch of copies of a
-		resource.</p>
-	<img src="bursting.gif" width="512px">
-	<p>
-		Burst Seeds, unfortunately, do not use CraftTweaker. Instead, you need to create a file called
-		"mechanics_burst_seeds.txt" in your scripts folder.<br />
-		Inside, you can add or remove burst seeds, one per line.<br />
-		There are three ways of creating burst seeds (without the quotes):<br />
-		"burst seed registry name" "block or item registry name" "block or item metadata"<br />
-		"burst seed registry name" "block or item registry name" "block or item metadata" "any texture"<br />
-		"burst seed registry name" "block or item registry name" "block or item metadata" "minimum number" "maximum
-		number" "any texture"<br />
-		<br />Example mechanics_burst_seeds.txt file:<br>
-		<code>
-remove burst_seed_end_stone<br/>
-burst_seed_sea_lantern minecraft:sea_lantern 0<br/>
-burst_seed_furnace minecraft:furnace 0 minecraft:furnace_front_off<br/>
-burst_seed_heavy_block mechanics:heavy_block 0 64 64 mechanics:heavy_block<br/>
-</code>
-	</p>
+		<hr>
 
-	<br />
+		<br />
 
-	<hr>
+		<h2>All CraftTweaker Methods:</h2>
 
-	<br />
-
-	<h2>All CraftTweaker Methods:</h2>
-
-	<br />Add a recipe for the Alloy Furnace.
-	<br /><code>mods.mechanics.<span class="orange">addAlloyFurnaceRecipe</span>(IIngredient, IIngredient, IItemStack)</code>
-	<br />
-	<br />Add a recipe for the Crushing Block. The number of probabilities must be the same as the number of outputs. If
-	the sum of the probabilities isn't 1, there is a chance for an output of nothing.
-	<br /><code>mods.mechanics.<span class="orange">addCrushingBlockRecipe</span>(IItemStack[], IItemStack[], double[])</code>
-	<br />
-	<br />Add a recipe for the Crushing Block. The number of probabilities must be the same as the number of outputs. If
-	the sum of the probabilities isn't 1, there is a chance for an output of nothing.
-	<br /><code>mods.mechanics.<span class="orange">addCrushingBlockRecipe</span>(IItemStack, IItemStack[], double[])</code>
-	<br />
-	<br />Add a recipe for the Drying Table.
-	<br /><code>mods.mechanics.<span class="orange">addDryingTableRecipe</span>(IIngredient, IItemStack)</code>
-	<br />
-	<br />Add a recipe for the Drying Table specifying the time in ticks.
-	<br /><code>mods.mechanics.<span class="orange">addDryingTableRecipe</span>(IIngredient, IItemStack, int)</span></code>
-	<br />
-	<br />Add a recipe for the Martlet.
-	<br /><code>mods.mechanics.<span class="orange">addMartletRecipe</span>(IIngredient, IItemStack)</code>
-	<br />
-	<br />Add a new transformation recipe through the nether portal. It is not possible to change the number of items
-	this way. 1 to 1 transformations only.
-	<br /><code>mods.mechanics.<span class="orange">addNetherPortalRecipe</span>(IItemStack, IItemStack)</code>
-	<br />
-	<br />Add a recipe for the Tube with a solid block output.
-	<br /><code>mods.mechanics.<span class="orange">addTubeRecipe</span>(IItemStack, IItemStack)</code>
-	<br />
-	<br />Add a recipe for the Tube with a solid block output.
-	<br /><code>mods.mechanics.<span class="orange">addTubeRecipe</span>(IItemStack[], IItemStack)</code>
-	<br />
-	<br />Add a recipe for the Tube with a liquid output.
-	<br /><code>mods.mechanics.<span class="orange">addTubeRecipe</span>(IItemStack, ILiquidStack)</code>
-	<br />
-	<br />Add a recipe for the Tube with a liquid output.
-	<br /><code>mods.mechanics.<span class="orange">addTubeRecipe</span>(IItemStack[], ILiquidStack)</code>
-	<br />
-	<br />Remove a recipe for the Crushing Block.
-	<br /><code>mods.mechanics.<span class="reddish">removeCrushingBlockRecipe</span>(IItemStack)</code>
-	<br />
-	<br />Remove a recipe for the Martlet.
-	<br /><code>mods.mechanics.<span class="reddish">removeMartletRecipe</span>(IIngredient)</code>
-	<br />
-	<br />Remove a nether portal transformation recipe.
-	<br /><code>mods.mechanics.<span class="reddish">removeNetherPortalRecipe</span>(IItemStack)</code>
-	<br />
-	<br />Remove a recipe for the Tube.
-	<br /><code>mods.mechanics.<span class="reddish">removeTubeRecipe</span>(IItemStack)</code>
-
+		<br />Add a recipe for the Alloy Furnace.
+		<br /><code>mods.mechanics.<span class="orange">addAlloyFurnaceRecipe</span>(IIngredient, IIngredient, IItemStack)</code>
+		<br />
+		<br />Add a recipe for the Crushing Block. The number of probabilities must be the same as the number of
+		outputs. If
+		the sum of the probabilities isn't 1, there is a chance for an output of nothing.
+		<br /><code>mods.mechanics.<span class="orange">addCrushingBlockRecipe</span>(IItemStack[], IItemStack[], double[])</code>
+		<br />
+		<br />Add a recipe for the Crushing Block. The number of probabilities must be the same as the number of
+		outputs. If
+		the sum of the probabilities isn't 1, there is a chance for an output of nothing.
+		<br /><code>mods.mechanics.<span class="orange">addCrushingBlockRecipe</span>(IItemStack, IItemStack[], double[])</code>
+		<br />
+		<br />Add a recipe for the Drying Table.
+		<br /><code>mods.mechanics.<span class="orange">addDryingTableRecipe</span>(IIngredient, IItemStack)</code>
+		<br />
+		<br />Add a recipe for the Drying Table specifying the time in ticks.
+		<br /><code>mods.mechanics.<span class="orange">addDryingTableRecipe</span>(IIngredient, IItemStack, int)</span></code>
+		<br />
+		<br />Add a recipe for the Martlet.
+		<br /><code>mods.mechanics.<span class="orange">addMartletRecipe</span>(IIngredient, IItemStack)</code>
+		<br />
+		<br />Add a new transformation recipe through the nether portal. It is not possible to change the number of
+		items
+		this way. 1 to 1 transformations only.
+		<br /><code>mods.mechanics.<span class="orange">addNetherPortalRecipe</span>(IItemStack, IItemStack)</code>
+		<br />
+		<br />Add a recipe for the Tube with a solid block output.
+		<br /><code>mods.mechanics.<span class="orange">addTubeRecipe</span>(IItemStack, IItemStack)</code>
+		<br />
+		<br />Add a recipe for the Tube with a solid block output.
+		<br /><code>mods.mechanics.<span class="orange">addTubeRecipe</span>(IItemStack[], IItemStack)</code>
+		<br />
+		<br />Add a recipe for the Tube with a liquid output.
+		<br /><code>mods.mechanics.<span class="orange">addTubeRecipe</span>(IItemStack, ILiquidStack)</code>
+		<br />
+		<br />Add a recipe for the Tube with a liquid output.
+		<br /><code>mods.mechanics.<span class="orange">addTubeRecipe</span>(IItemStack[], ILiquidStack)</code>
+		<br />
+		<br />Remove a recipe for the Crushing Block.
+		<br /><code>mods.mechanics.<span class="reddish">removeCrushingBlockRecipe</span>(IItemStack)</code>
+		<br />
+		<br />Remove a recipe for the Martlet.
+		<br /><code>mods.mechanics.<span class="reddish">removeMartletRecipe</span>(IIngredient)</code>
+		<br />
+		<br />Remove a nether portal transformation recipe.
+		<br /><code>mods.mechanics.<span class="reddish">removeNetherPortalRecipe</span>(IItemStack)</code>
+		<br />
+		<br />Remove a recipe for the Tube.
+		<br /><code>mods.mechanics.<span class="reddish">removeTubeRecipe</span>(IItemStack)</code>
+	</div>
 </body>
 
 </html>
