Added Miner Golems link

--- a/index.html
+++ b/index.html
@@ -86,6 +86,18 @@
 					</table>
 				</a>
 			</td>
+
+			
+			<td>
+				<a href="https://www.curseforge.com/minecraft/mc-mods/miner-golems">
+					<table>
+						<tr><img src="images/minergolems_logo128.png" height="128px"></tr>
+						<tr>
+							<h1>Miner Golems</h1>
+						</tr>
+					</table>
+				</a>
+			</td>
 		</tr>
 	</table>
 </body>
