fixed wrong download link

--- a/AutoEP/index.html
+++ b/AutoEP/index.html
@@ -47,7 +47,7 @@
 			<div id="login_text">Connecting...</div>
 			<br />
 			<div id="login_text_failed" onclick="resetTextFailed()"></div>
-			<div><a href="dist/autoep_server.jar">Download Server</a></div>
+			<div><a href="dist/autoep_server.zip">Download Server</a></div>
 		</div>
 
 		<div id="newtab_arrow" onclick="window.open(window.location.href, '_blank');">↗</div>
