--- a/pristeel/index.html
+++ b/pristeel/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Language" content="en-gb">
 	<link href="../stylesheet.css" rel="stylesheet">
 	<link rel="icon" href="../docs/hearthwell.png">
-	<title>Groves</title>
+	<title>Pristeel</title>
 </head>
 
 <body>
