--- a/pokeidler/index.html
+++ b/pokeidler/index.html
@@ -22,7 +22,7 @@
 
     <script type="text/babel" src="index.jsx"></script>
     <div id="root"></div>
-    <script type="text/babel"> ReactDOM.render(<App />, document.getElementById('root')) </script>
+    <script type="text/babel"> initCache().then(ReactDOM.render(<App />, document.getElementById('root'))) </script>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
