--- a/pokeidler/index.html
+++ b/pokeidler/index.html
@@ -16,6 +16,10 @@
     <script type="application/javascript" src="../lib/util.js"></script>
 
     <link rel="stylesheet" href="style.css">
+    <script type="text/babel" src="classes/Pokemon.js"></script>
+    <script type="text/babel" src="classes/Region.js"></script>
+    <script type="text/babel" src="classes/Type.js"></script>
+    <script type="text/babel" src="classes/Data.js"></script>
 </head>
 
 <body>
