--- a/pokeidler/index.html
+++ b/pokeidler/index.html
@@ -25,8 +25,8 @@
 <body>
 
     <script type="text/babel" src="index.jsx"></script>
-    <div id="root"></div>
-    <script type="text/babel"> initCache().then(ReactDOM.render(<App />, document.getElementById('root'))) </script>
+    <div id="root" style="color: white; font-size: 32px">&nbsp;&nbsp;&nbsp;&nbsp;Loading...</div>
+    <script type="text/babel"> init().then(() => ReactDOM.render(<App />, document.getElementById('root'))) </script>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
