battle and items
new battle system
battle types
items

--- a/pokeidler/index.html
+++ b/pokeidler/index.html
@@ -25,6 +25,7 @@
     <script type="text/babel" src="classes/Region.js"></script>
     <script type="text/babel" src="classes/Type.js"></script>
     <script type="text/babel" src="classes/Data.js"></script>
+    <script type="text/babel" src="classes/Items.js"></script>
 </head>
 
 <body>
