changes to items [WIP]

--- a/pokeidler/index.html
+++ b/pokeidler/index.html
@@ -35,6 +35,7 @@
     <script type="text/babel" src="jsx/gym.jsx"></script>
     <script type="text/babel" src="jsx/map.jsx"></script>
     <script type="text/babel" src="jsx/party.jsx"></script>
+    <script type="text/babel" src="jsx/items.jsx"></script>
     <script type="text/babel" src="jsx/info.jsx"></script>
     <script type="text/babel" src="index.jsx"></script>
     <!-- <script type="text/babel" src="jsx/"></script> -->
