mobile fixes and verticality button

--- a/concept/index.html
+++ b/concept/index.html
@@ -13,18 +13,62 @@
 
     <script>
 
+
+        const gridSize = 64;
+
+        function fullWidth() {
+            return Math.max(
+                document.body.scrollWidth,
+                document.documentElement.scrollWidth,
+                document.body.offsetWidth,
+                document.documentElement.offsetWidth,
+                document.body.clientWidth,
+                document.documentElement.clientWidth
+            );
+        }
+
+        function fullHeight() {
+            return Math.max(
+                document.body.scrollHeight,
+                document.documentElement.scrollHeight,
+                document.body.offsetHeight,
+                document.documentElement.offsetHeight,
+                document.body.clientHeight,
+                document.documentElement.clientHeight
+            );
+        }
+
+        function getButtons() {
+            let buttonsHorizontal = document.getElementById("buttonsHorizontal")
+            let buttonsVertical = document.getElementById("buttonsVertical")
+            return buttonsHorizontal ? buttonsHorizontal : buttonsVertical
+        }
+
+        function isVertical() {
+            return document.getElementById("buttonsVertical") ? true : false
+            // return fullHeight() > fullWidth;
+        }
+
+        function swapVerticality() {
+            let buttonsHorizontal = document.getElementById("buttonsHorizontal")
+            let buttonsVertical = document.getElementById("buttonsVertical")
+            if (buttonsHorizontal) {
+                buttonsHorizontal.id = "buttonsVertical"
+            } else {
+                buttonsVertical.id = "buttonsHorizontal"
+            }
+        }
+
         function isMobile() {
             return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)
         }
 
-        const gridSize = isMobile() ? 128 : 64;
-
         function toggleVisibility(elementId) {
             let div = document.getElementById(elementId);
-            if (div.style.display != "block")
-                div.style.display = "block"
+            if (div.style.display === "block")
+                div.style.display = "none"
             else
-                div.style.display = ""
+                div.style.display = "block"
         }
 
         function newWordClicked() {
@@ -51,10 +95,34 @@
             saveState(copyText.value);
         }
 
-        //
-        //
-
         var state = []
+        var actionsTaken = []
+
+        function undoClicked() {
+            if (actionsTaken.length < 2)
+                return
+
+            while (state.length > 0)
+                removeNode(state[0])
+            actionsTaken.splice(0, 1)
+            loadState(actionsTaken[0])
+            saveState(null, true)
+        }
+
+        var canClear = false
+        function clearClicked() {
+            if (canClear)
+                saveState("")
+            else {
+                let b = document.getElementById('clearButton')
+                b.innerHTML = "Sure?"
+                canClear = true
+                setTimeout(() => {
+                    b.innerHTML = "Clear"
+                    canClear = false
+                }, 2000)
+            }
+        }
 
         function getStateString() {
             let stateString = ``;
@@ -75,8 +143,8 @@
             return getUrlSearch().get(paramName)
         }
 
-        function loadState() {
-            let stateString = getUrlParam('state');
+        function loadState(_stateString = null) {
+            let stateString = _stateString === null ? getUrlParam('state') : _stateString
             if (stateString) {
                 let elemStrings = stateString.split("_")
                 elemStrings.forEach(es => {
@@ -85,7 +153,7 @@
                         createNode(elemParts[0], {
                             x: gridSize * elemParts[1] + gridSize / 2,
                             y: gridSize * elemParts[2] + gridSize / 2
-                        }, false)
+                        }, false, true)
                     }
                 })
             } else {
@@ -93,20 +161,22 @@
                 createNode("base", {
                     x: 32 + 64 * Math.round((fullWidth() - 280) / 2 / 64),
                     y: 32 + 128
-                })
+                }, true, true)
 
             }
             updateExportInput()
         }
 
-        function saveState(newStateString) {
+        function saveState(newStateString = null, isUndo = false) {
             let url = getUrlSearch()
-            let stateString = newStateString || getStateString()
+            let stateString = newStateString === null ? getStateString() : newStateString
             url.set('state', stateString)
             window.history.replaceState('', '', "?" + url.toString())
             updateExportInput()
-            if (newStateString)
+            if (newStateString !== null)
                 window.location.href = window.location.href
+            if (!isUndo)
+                actionsTaken.unshift(stateString)
         }
 
         function updateExportInput() {
@@ -116,52 +186,75 @@
         //
         //
 
-        function fullWidth() {
-            return Math.max(
-                document.body.scrollWidth,
-                document.documentElement.scrollWidth,
-                document.body.offsetWidth,
-                document.documentElement.offsetWidth,
-                document.body.clientWidth,
-                document.documentElement.clientWidth
-            );
+        function getElementBounds(element) {
+            var rect = element.getBoundingClientRect();
+            let x, y;
+
+            if (rect.width == 0) {
+                x = element.style.left.replace("px", "")
+                y = element.style.top.replace("px", "")
+            } else {
+                x = rect.left
+                y = rect.top
+            }
+
+            x = Math.round(x / gridSize) * gridSize;
+            y = Math.round(y / gridSize) * gridSize;
+            return { x, y, w: rect.width, h: rect.height }
+        }
+
+        function alignElementWithGrid(element) {
+            let { x, y } = getElementBounds(element)
+            element.style.left = x + "px";
+            element.style.top = y + "px";
+        }
+
+        function removeIfOnTopOfButtons(element) {
+            let { x, y } = getElementBounds(element)
+            if ((isVertical() && x > fullWidth() - 280) || (!isVertical() && y > fullHeight() - 280)) {
+                if (element.conceptIndex == "base") {
+                    if (isVertical()) {
+                        element.style.left = (fullWidth() - 280 - 128) + "px"
+                    } else {
+                        element.style.top = (fullHeight() - 280 - 128) + "px"
+                    }
+                } else
+                    removeNode(element)
+            }
         }
 
         function removeNode(element) {
             document.body.removeChild(element)
             state.splice(state.indexOf(element), 1)
-            saveState()
         }
 
-        function createNode(i, event, save = true, startDrag = false) {
+        function createNode(i, event, save, isLoading) {
             var element = document.createElement('div');
             element.conceptIndex = i
             element.className = "moveable"
             element.innerHTML = `<img src="./images/${i}.png" title="${i}: ${tooltips[i]}" width="${gridSize}" height="${gridSize}">`
             element.style.top = (event.y - 32) + "px";
             element.style.left = (event.x - 32) + "px";
-            if (i != "base" && isMobile()) {
-                element.style.left = (fullWidth() - 280 - 128) + "px";
+            if (!isLoading && i != "base" && isMobile()) {
+                if (isVertical()) {
+                    element.style.left = (fullWidth() - 280 - 128) + "px";
+                } else {
+                    element.style.top = (fullHeight() - 280 - 128) + "px";
+                }
             }
+            if (!isLoading)
+                alignElementWithGrid(element)
+
             document.body.appendChild(element);
             let draggable = Draggable.create(element, {
                 type: "left,top",
                 onDragEnd: function (e) {
-                    var rect = element.getBoundingClientRect();
-                    let x = Math.round(rect.left / gridSize) * gridSize;
-                    let y = Math.round(rect.top / gridSize) * gridSize;
-                    element.style.left = x + "px";
-                    element.style.top = y + "px";
-                    if (x > fullWidth() - 280) {
-                        if (i == "base") {
-                            element.style.left = (fullWidth() - 280 - 128) + "px"
-                        } else
-                            removeNode(element)
-                    }
+                    alignElementWithGrid(element)
+                    removeIfOnTopOfButtons(element)
                     saveState()
                 },
             })[0];
-            if (startDrag)
+            if (!isLoading && !isMobile())
                 draggable.startDrag(event)
             state.push(element)
             if (save)
@@ -169,7 +262,7 @@
         }
 
         function createButton(i) {
-            var buttons = document.getElementById("buttons")
+            var buttons = getButtons()
             var elemDiv = document.createElement('div');
             elemDiv.draggable = true
             elemDiv.className = "button"
@@ -177,12 +270,12 @@
             buttons.appendChild(elemDiv);
             elemDiv.onmousedown = e => {
                 let bounds = elemDiv.getBoundingClientRect()
-                createNode(i, event, true, true);
+                createNode(i, event, isMobile(), false);
             }
         }
 
         function createBr(i) {
-            document.getElementById("buttons").appendChild(document.createElement('br'));
+            getButtons().appendChild(document.createElement('br'));
         }
 
         let titleIndex = 0;
@@ -190,7 +283,7 @@
         function createHr(title) {
             let h1 = document.createElement('h1')
             h1.innerHTML = title
-            document.getElementById("buttons").appendChild(h1);
+            getButtons().appendChild(h1);
             titleIndex++;
         }
 
@@ -208,6 +301,8 @@
                 let exportInput = document.getElementById("exportInputButton");
                 exportInput.parentElement.removeChild(exportInput)
             }
+
+            toggleVisibility(`controlsDiv`)
         }
 
     </script>
@@ -220,8 +315,14 @@
         <div class="panel ui uibutton" onclick="toggleVisibility(`wordDiv`)">W</div>
         <div class="panel ui uibutton" onclick="toggleVisibility(`importDiv`)">I</div>
         <div class="panel ui uibutton" onclick="toggleVisibility(`exportDiv`)">E</div>
+        <div class="panel ui uibutton" onclick="toggleVisibility(`controlsDiv`)">C</div>
+        <div class="panel ui uibutton" onclick="swapVerticality()">∷</div>
     </div>
     <div class="ui" id="uiPanels">
+        <div class="panel hidden" style="background-color: transparent; text-align: left; padding: 0;" id="controlsDiv">
+            <div id="clearButton" class="panel ui" style="display: inline-block; width: 68px; cursor: pointer; margin-bottom: 0;" onclick="clearClicked()">Clear</div>
+            <div id="undoButton" class="panel ui" style="display: inline-block; width: 68px; cursor: pointer; margin-bottom: 0;" onclick="undoClicked()">Undo</div>
+        </div>
         <div class="panel hidden" id="helpDiv">
             In Concept, your goal is to guess words through the association of icons.<br />
             A player chooses a word or phrase that the other players need to guess.<br />
@@ -242,7 +343,7 @@
     </div>
 
 
-    <div id="buttons"></div>
+    <div id="buttonsVertical"></div>
 
 </body>
 
